--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,20 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- 이미지 업로드 -->
+<!-- https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib-->		<dependency>
+	<groupId>org.imgscalr</groupId>
+	<artifactId>imgscalr-lib</artifactId>
+	<version>4.2</version>
+</dependency>
 
+
+<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+<dependency>
+	<groupId>commons-fileupload</groupId>
+	<artifactId>commons-fileupload</artifactId>
+	<version>1.3.2</version>		
+</dependency>
 	</dependencies>
 	<build>
 		<plugins>
