--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,22 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<context-param>
+        <param-name>log4jConfigLocation</param-name>
+        <param-value>
+            classpath:project/config/log4j.xml
+        </param-value>
+    </context-param>
+ 
+    <!-- Log4j -->
+    <listener>
+        <listener-class>
+            org.springframework.web.util.Log4jConfigListener
+        </listener-class>
+    </listener>
+
+
+출처: https://cofs.tistory.com/354 [CofS]
 
 	<!-- Processes application requests -->
 	<servlet>
