--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,19 @@
          <artifactId>jackson-databind</artifactId>
          <version>2.9.8</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
+	<dependency>
+    	<groupId>org.springframework</groupId>
+	    <artifactId>spring-websocket</artifactId>
+    	<version>5.1.5.RELEASE</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
+	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-mapper-asl</artifactId>
+		<version>1.9.13</version>
+	</dependency>
+      
 
 
 
