--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,8 @@
          <scope>runtime</scope>
       </dependency>
 
+
+
    <!-- Logging -->
    <dependency>
       <groupId>org.slf4j</groupId>
@@ -152,8 +154,8 @@
       <!-- Servlet -->
       <dependency>
          <groupId>javax.servlet</groupId>
-         <artifactId>servlet-api</artifactId>
-         <version>2.5</version>
+         <artifactId>javax.servlet-api</artifactId>
+         <version>3.1.0</version>
          <scope>provided</scope>
       </dependency>
       <dependency>
@@ -189,6 +191,17 @@
       
 
 
+        <!-- WebSocket -->
+
+        <dependency>
+
+            <groupId>org.springframework</groupId>
+
+            <artifactId>spring-websocket</artifactId>
+
+            <version>4.1.6.RELEASE</version>
+
+        </dependency>
 
       <!-- Test -->
       <dependency>
